chore: Update API configuration to use new OpenAPI file location
